--- a/environment.yml
+++ b/environment.yml
@@ -1,162 +1,304 @@
-name: ds_agent
+name: code-actor
 channels:
   - defaults
-  - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_1
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2025.2.25=h06a4308_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - debugpy=1.8.13=py311hfdbb021_0
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.1.0=pyhd8ed1ab_1
-  - importlib-metadata=8.6.1=pyha770c72_0
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=9.0.2=pyhfb0248b_0
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - krb5=1.21.3=h143b758_0
+  - expat=2.7.1=h6a678d5_0
   - ld_impl_linux-64=2.40=h12ee557_0
-  - libedit=3.1.20230828=h5eee18b_0
   - libffi=3.4.4=h6a678d5_1
-  - libgcc=14.2.0=h767d61c_2
-  - libgcc-ng=14.2.0=h69a702a_2
-  - libgomp=14.2.0=h767d61c_2
-  - libsodium=1.0.20=h4ab18f5_0
-  - libstdcxx=14.2.0=h8f9b012_2
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - libxcb=1.17.0=h9b100fa_0
   - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - openssl=3.4.1=h7b32b05_0
-  - packaging=24.2=pyhd8ed1ab_2
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.0=py311h06a4308_0
-  - platformdirs=4.3.6=pyhd8ed1ab_1
-  - prompt-toolkit=3.0.50=pyha770c72_0
-  - psutil=7.0.0=py311h9ecbd09_0
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pygments=2.19.1=pyhd8ed1ab_0
-  - python=3.11.11=he870216_0
-  - python-dateutil=2.9.0.post0=pyhff2d567_1
-  - python_abi=3.11=2_cp311
-  - pyzmq=26.2.1=py311h7deb3e3_0
+  - openssl=3.0.16=h5eee18b_0
+  - pip=25.1=pyhc872135_2
+  - pthread-stubs=0.3=h0ce48e5_1
+  - python=3.10.18=h1a3bd86_0
   - readline=8.2=h5eee18b_0
-  - setuptools=75.8.0=py311h06a4308_0
-  - six=1.17.0=pyhd8ed1ab_0
+  - setuptools=78.1.1=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - tk=8.6.14=h39e8969_0
-  - tornado=6.4.2=py311h9ecbd09_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.12.2=pyha770c72_1
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - wheel=0.45.1=py311h06a4308_0
+  - tk=8.6.14=h993c535_1
+  - wheel=0.45.1=py310h06a4308_0
+  - xorg-libx11=1.8.12=h9b100fa_1
+  - xorg-libxau=1.0.12=h9b100fa_0
+  - xorg-libxdmcp=1.1.5=h9b100fa_0
+  - xorg-xorgproto=2024.1=h5eee18b_1
   - xz=5.6.4=h5eee18b_1
-  - zeromq=4.3.5=h3b0a872_7
-  - zipp=3.21.0=pyhd8ed1ab_1
   - zlib=1.2.13=h5eee18b_1
   - pip:
+      - aiohappyeyeballs==2.6.1
+      - aiohttp==3.11.16
+      - aioice==0.10.1
+      - aiortc==1.12.0
+      - aiosignal==1.3.2
+      - alabaster==0.7.16
+      - alembic==1.15.2
       - altair==5.5.0
       - annotated-types==0.7.0
-      - anyio==4.8.0
+      - anyio==4.9.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - async-timeout==4.0.3
       - attrs==25.3.0
+      - autowoe==1.3.3
+      - av==14.3.0
+      - babel==2.17.0
       - backoff==2.2.1
+      - backports-tarfile==1.2.0
+      - beautifulsoup4==4.13.3
+      - bitsandbytes==0.46.0
       - blinker==1.9.0
+      - bokeh==3.7.3
+      - bs4==0.0.2
+      - build==1.2.2.post1
+      - cachecontrol==0.14.3
       - cachetools==5.5.2
+      - catboost==1.2.8
       - certifi==2025.1.31
+      - cffi==1.17.1
       - charset-normalizer==3.4.1
-      - click==8.2.1
-      - contourpy==1.3.2
+      - cleo==2.1.0
+      - click==8.1.8
+      - cloudpickle==3.1.1
+      - cmaes==0.11.1
+      - coloredlogs==15.0.1
+      - colorlog==6.9.0
+      - contourpy==1.3.1
+      - crashtest==0.4.1
+      - cryptography==44.0.3
       - cycler==0.12.1
+      - dask==2025.3.0
+      - dataclasses-json==0.6.7
+      - datasets==3.6.0
+      - dill==0.3.8
+      - distlib==0.3.9
+      - distributed==2025.3.0
+      - distro==1.9.0
+      - dnspython==2.7.0
+      - docutils==0.20.1
       - dotenv==0.9.9
-      - e2b==1.5.0
-      - e2b-code-interpreter==1.5.0
+      - dulwich==0.22.8
+      - e2b==1.2.0
+      - e2b-code-interpreter==1.1.1
       - et-xmlfile==2.0.0
+      - exceptiongroup==1.3.0
+      - fastembed==0.6.0
+      - fastjsonschema==2.21.1
       - filelock==3.18.0
-      - fonttools==4.58.0
-      - fsspec==2025.5.0
-      - gensim==4.3.3
+      - findpython==0.6.3
+      - flatbuffers==25.2.10
+      - fonttools==4.56.0
+      - frozenlist==1.5.0
+      - fsspec==2025.3.0
       - gigachat==0.1.39
       - gitdb==4.0.12
       - gitpython==3.1.44
+      - google-crc32c==1.7.1
+      - grandalf==0.8
+      - graphviz==0.20.3
       - greenlet==3.1.1
       - grpcio==1.71.0
       - grpcio-tools==1.71.0
       - h11==0.14.0
+      - h2==4.2.0
+      - holidays==0.69
+      - hpack==4.1.0
       - httpcore==1.0.7
       - httpx==0.28.1
-      - huggingface-hub==0.31.4
+      - httpx-sse==0.4.0
+      - huggingface-hub==0.30.1
+      - humanfriendly==10.0
+      - hyperframe==6.1.0
       - idna==3.10
+      - ifaddr==0.2.0
+      - imagesize==1.4.1
+      - imbalanced-learn==0.13.0
+      - imblearn==0.0
+      - importlib-metadata==8.7.0
+      - iniconfig==2.1.0
+      - installer==0.7.0
+      - jaraco-classes==3.4.0
+      - jaraco-context==6.0.1
+      - jaraco-functools==4.1.0
+      - jeepney==0.9.0
       - jinja2==3.1.6
-      - joblib==1.5.0
+      - jiter==0.9.0
+      - joblib==1.4.2
+      - json2html==1.3.0
       - jsonpatch==1.33
       - jsonpointer==3.0.0
       - jsonschema==4.23.0
-      - jsonschema-specifications==2025.4.1
+      - jsonschema-specifications==2024.10.1
+      - keyring==25.6.0
       - kiwisolver==1.4.8
-      - langchain==0.3.20
-      - langchain-core==0.3.44
-      - langchain-gigachat==0.3.6
-      - langchain-text-splitters==0.3.6
-      - langfuse==2.59.7
-      - langgraph==0.4.5
-      - langgraph-checkpoint==2.0.26
-      - langgraph-prebuilt==0.1.8
-      - langgraph-sdk==0.1.70
-      - langsmith==0.3.13
+      - langchain==0.3.23
+      - langchain-community==0.3.21
+      - langchain-core==0.3.51
+      - langchain-gigachat==0.3.8
+      - langchain-openai==0.3.9
+      - langchain-qdrant==0.2.0
+      - langchain-text-splitters==0.3.8
+      - langfuse==2.60.0
+      - langgraph==0.3.18
+      - langgraph-checkpoint==2.0.21
+      - langgraph-prebuilt==0.1.3
+      - langgraph-sdk==0.1.58
+      - langsmith==0.3.18
+      - liac-arff==2.5.0
+      - lightautoml==0.4.1
+      - lightgbm==4.6.0
+      - loader==2017.9.11
+      - locket==1.0.0
+      - loguru==0.7.3
+      - mako==1.3.9
+      - markdown==3.8
       - markupsafe==3.0.2
-      - matplotlib==3.10.3
-      - narwhals==1.40.0
+      - marshmallow==3.26.1
+      - matplotlib==3.10.1
+      - minio==7.2.15
+      - mlxtend==0.23.4
+      - mmh3==5.1.0
+      - more-itertools==10.7.0
+      - mpmath==1.3.0
+      - msgpack==1.1.0
+      - multidict==6.3.2
+      - multiprocess==0.70.16
+      - mypy-extensions==1.0.0
+      - narwhals==1.32.0
+      - networkx==3.4.2
       - nltk==3.9.1
-      - numpy==1.26.4
+      - numpy==1.26.2
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-cusparselt-cu12==0.6.2
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
+      - onnxruntime==1.21.0
+      - openai==1.88.0
+      - openml==0.15.1
       - openpyxl==3.1.5
+      - optuna==4.2.1
       - orjson==3.10.15
-      - ormsgpack==1.9.1
+      - packaging==24.2
       - pandas==2.2.3
-      - pillow==11.2.1
+      - partd==1.4.2
+      - patsy==1.0.1
+      - pbs-installer==2025.6.12
+      - pillow==11.1.0
+      - pkginfo==1.12.1.2
+      - platformdirs==4.3.8
+      - plotly==6.0.1
+      - pluggy==1.5.0
+      - poetry-core==1.9.1
+      - portalocker==2.10.1
+      - propcache==0.3.1
       - protobuf==5.29.4
-      - pyarrow==20.0.0
+      - psutil==7.0.0
+      - py-rust-stemmers==0.1.5
+      - pyarrow==19.0.1
+      - pycparser==2.22
+      - pycryptodome==3.22.0
       - pydantic==2.10.6
       - pydantic-core==2.27.2
+      - pydantic-settings==2.8.1
       - pydeck==0.9.1
+      - pydub==0.25.1
+      - pyee==13.0.0
+      - pygments==2.19.1
+      - pylibsrtp==0.12.0
+      - pyngrok==7.2.8
+      - pyopenssl==25.0.0
       - pyparsing==3.2.3
+      - pyproject-hooks==1.2.0
+      - pytest==8.3.5
+      - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
-      - pytz==2025.2
+      - pytz==2025.1
       - pyyaml==6.0.2
+      - qdrant-client==1.13.3
+      - rapidfuzz==3.13.0
       - referencing==0.36.2
       - regex==2024.11.6
       - requests==2.32.3
       - requests-toolbelt==1.0.0
-      - rpds-py==0.25.1
+      - roman-numerals-py==3.1.0
+      - rpds-py==0.24.0
       - safetensors==0.5.3
+      - scikit-learn==1.6.1
       - scipy==1.13.1
       - seaborn==0.13.2
+      - secretstorage==3.3.3
+      - sentence-transformers==4.0.2
+      - shellingham==1.5.4
+      - six==1.17.0
+      - sklearn-compat==0.1.3
       - smart-open==7.1.0
       - smmap==5.0.2
       - sniffio==1.3.1
+      - snowballstemmer==2.2.0
+      - sortedcontainers==2.4.0
+      - sounddevice==0.5.1
+      - soupsieve==2.6
+      - sphinx==7.1.2
+      - sphinx-rtd-theme==3.0.2
+      - sphinxcontrib-applehelp==2.0.0
+      - sphinxcontrib-devhelp==2.0.0
+      - sphinxcontrib-htmlhelp==2.1.0
+      - sphinxcontrib-jquery==4.1
+      - sphinxcontrib-jsmath==1.0.1
+      - sphinxcontrib-qthelp==2.0.0
+      - sphinxcontrib-serializinghtml==2.0.0
       - sqlalchemy==2.0.39
-      - streamlit==1.45.1
+      - statsmodels==0.14.0
+      - streamlit==1.44.1
+      - streamlit-bokeh-events==0.1.2
+      - streamlit-scrollable-textbox==0.0.3
+      - streamlit-webrtc==0.62.4
+      - strenum==0.4.15
+      - sympy==1.13.1
+      - tblib==3.1.0
       - tenacity==9.0.0
+      - threadpoolctl==3.6.0
+      - tiktoken==0.9.0
       - tokenizers==0.21.1
       - toml==0.10.2
+      - tomli==2.2.1
+      - tomlkit==0.13.3
+      - toolz==1.0.0
+      - torch==2.6.0
+      - tornado==6.5.1
       - tqdm==4.67.1
-      - transformers==4.52.2
+      - transformers==4.51.0
+      - triton==3.2.0
+      - trove-classifiers==2025.5.9.12
       - types-requests==2.32.0.20250306
-      - tzdata==2025.2
+      - typing-extensions==4.14.0
+      - typing-inspect==0.9.0
+      - tzdata==2025.1
       - urllib3==2.3.0
+      - virtualenv==20.31.2
       - watchdog==6.0.0
       - wrapt==1.17.2
+      - xgboost==2.1.4
+      - xmltodict==0.14.2
       - xxhash==3.5.0
+      - xyzservices==2025.4.0
+      - yarl==1.19.0
+      - zict==3.0.0
+      - zipp==3.23.0
       - zstandard==0.23.0
