--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ alembic==1.15.2
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
+anytree==2.13.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+asttokens==3.0.0
+async-timeout==4.0.3
 attrs==25.3.0
+autodocsumm==0.2.14
 AutoWoE==1.3.3
 av==14.3.0
 babel==2.17.0
@@ -24,6 +28,7 @@ bs4==0.0.2
 build==1.2.2.post1
 CacheControl==0.14.3
 cachetools==5.5.2
+catboost==1.2.8
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -40,6 +45,8 @@ cycler==0.12.1
 dask==2025.3.0
 dataclasses-json==0.6.7
 datasets==3.6.0
+decorator==5.2.1
+depq==1.5.5
 dill==0.3.8
 distlib==0.3.9
 distributed==2025.3.0
@@ -48,17 +55,24 @@ dnspython==2.7.0
 docutils==0.20.1
 dotenv==0.9.9
 dulwich==0.22.8
+dynaconf==3.2.11
 e2b==1.2.0
 e2b-code-interpreter==1.1.1
 et_xmlfile==2.0.0
+ete3==3.1.3
+exceptiongroup==1.3.0
+executing==2.2.0
 fastembed==0.6.0
 fastjsonschema==2.21.1
+fedot==0.7.5
 filelock==3.18.0
 findpython==0.6.3
 flatbuffers==25.2.10
 fonttools==4.56.0
 frozenlist==1.5.0
 fsspec==2025.3.0
+func_timeout==4.3.5
+future==1.0.0
 gigachat==0.1.39
 gitdb==4.0.12
 GitPython==3.1.44
@@ -78,22 +92,30 @@ httpx-sse==0.4.0
 huggingface-hub==0.30.1
 humanfriendly==10.0
 hyperframe==6.1.0
+hyperopt==0.2.7
 idna==3.10
 ifaddr==0.2.0
+imageio==2.37.0
 imagesize==1.4.1
 imbalanced-learn==0.13.0
 imblearn==0.0
+importlib_metadata==8.7.0
 iniconfig==2.1.0
 installer==0.7.0
+iOpt==0.2.22
+ipython==8.37.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
+jedi==0.19.2
 jeepney==0.9.0
 Jinja2==3.1.6
 jiter==0.9.0
 joblib==1.4.2
 json2html==1.3.0
+json_repair==0.47.1
 jsonpatch==1.33
+jsonpickle==4.1.1
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -106,6 +128,7 @@ langchain-gigachat==0.3.8
 langchain-openai==0.3.9
 langchain-qdrant==0.2.0
 langchain-text-splitters==0.3.8
+langdetect==1.0.9
 langfuse==2.60.0
 langgraph==0.3.18
 langgraph-checkpoint==2.0.21
@@ -115,14 +138,17 @@ langsmith==0.3.18
 liac-arff==2.5.0
 LightAutoML==0.4.1
 lightgbm==4.6.0
+litellm==1.73.0
 loader==2017.9.11
 locket==1.0.0
 loguru==0.7.3
+mabwiser==2.7.4
 Mako==1.3.9
 Markdown==3.8
-MarkupSafe==3.0.2
+MarkupSafe==2.1.1
 marshmallow==3.26.1
 matplotlib==3.10.1
+matplotlib-inline==0.1.7
 minio==7.2.15
 mlxtend==0.23.4
 mmh3==5.1.0
@@ -133,7 +159,7 @@ multidict==6.3.2
 multiprocess==0.70.16
 mypy-extensions==1.0.0
 narwhals==1.32.0
-networkx==3.4.2
+networkx==3.2.1
 nltk==3.9.1
 numpy==1.26.2
 nvidia-cublas-cu12==12.4.5.8
@@ -155,18 +181,32 @@ openml==0.15.1
 openpyxl==3.1.5
 optuna==4.2.1
 orjson==3.10.15
+packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 partd==1.4.2
+pathos==0.3.2
 patsy==1.0.1
 pbs-installer==2025.6.12
+pexpect==4.9.0
 pillow==11.1.0
 pkginfo==1.12.1.2
+platformdirs==4.3.8
 plotly==6.0.1
 pluggy==1.5.0
+poetry-core==1.9.1
 portalocker==2.10.1
+pox==0.3.6
+ppft==1.7.7
+prompt_toolkit==3.0.51
 propcache==0.3.1
 protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py4j==0.10.9.9
 py_rust_stemmers==0.1.5
+pyaml==25.5.0
 pyarrow==19.0.1
 pycparser==2.22
 pycryptodome==3.22.0
@@ -176,17 +216,21 @@ pydantic_core==2.27.2
 pydeck==0.9.1
 pydub==0.25.1
 pyee==13.0.0
+Pygments==2.19.1
 pylibsrtp==0.12.0
 pyngrok==7.2.8
 pyOpenSSL==25.0.0
 pyparsing==3.2.3
 pyproject_hooks==1.2.0
 pytest==8.3.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+pyvis==0.2.1
 PyYAML==6.0.2
 qdrant-client==1.13.3
 RapidFuzz==3.13.0
+readthedocs-sphinx-search==0.3.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
@@ -194,13 +238,18 @@ requests-toolbelt==1.0.0
 roman-numerals-py==3.1.0
 rpds-py==0.24.0
 safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.13.1
+SALib==1.5.1
+scikit-base==0.12.3
+scikit-learn==1.5.2
+scikit-optimize==0.10.2
+scipy==1.12.0
 seaborn==0.13.2
 SecretStorage==3.3.3
 sentence-transformers==4.0.2
 shellingham==1.5.4
+six==1.17.0
 sklearn-compat==0.1.3
+sktime==0.37.0
 smart-open==7.1.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -211,6 +260,7 @@ soupsieve==2.6
 Sphinx==7.1.2
 sphinx-rtd-theme==3.0.2
 sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-details-directive==0.1.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jquery==4.1
@@ -218,6 +268,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.39
+stack-data==0.6.3
 statsmodels==0.14.0
 streamlit==1.44.1
 streamlit-bokeh-events==0.1.2
@@ -225,25 +276,34 @@ streamlit-scrollable-textbox==0.0.3
 streamlit-webrtc==0.62.4
 StrEnum==0.4.15
 sympy==1.13.1
+tabulate==0.9.0
 tblib==3.1.0
 tenacity==9.0.0
+testfixtures==8.3.0
+thegolem==0.4.1
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
 toml==0.10.2
+tomli==2.2.1
 tomlkit==0.13.3
 toolz==1.0.0
 torch==2.6.0
-tqdm==4.67.1
+tornado==6.5.1
+tqdm==4.66.6
+traitlets==5.14.3
 transformers==4.51.0
 triton==3.2.0
 trove-classifiers==2025.5.9.12
 types-requests==2.32.0.20250306
+typing==3.7.4.3
 typing-inspect==0.9.0
+typing_extensions==4.14.0
 tzdata==2025.1
 urllib3==2.3.0
 virtualenv==20.31.2
 watchdog==6.0.0
+wcwidth==0.2.13
 wrapt==1.17.2
 xgboost==2.1.4
 xmltodict==0.14.2
@@ -251,4 +311,6 @@ xxhash==3.5.0
 xyzservices==2025.4.0
 yarl==1.19.0
 zict==3.0.0
+zipp==3.23.0
+zss==1.2.0
 zstandard==0.23.0
